--- a/src/site/_includes/footer.njk
+++ b/src/site/_includes/footer.njk
@@ -1,6 +1,13 @@
 <footer>
-
+<div class="media">
+<ul>
+<li><a href="https://www.linkedin.com/in/tsang-kai-chang-7a3aa7111/" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i></a></li>
+<li><a href="https://scholar.google.com/citations?hl=en&user=2UfyRPoAAAAJ" target="_blank" rel="noopener"><i class="fa fa-graduation-cap"></i></a</li>
+</ul>
+</div>
 <p>
   last updated: {{ site.buildTime | dateDisplay('LLL d, yyyy') }}
 </p>
 </footer>
+
+
