update color palette

--- a/src/site/_includes/postcss/_variables.css
+++ b/src/site/_includes/postcss/_variables.css
@@ -4,8 +4,9 @@ $mid: 740px;
 $wide: 1200px;
 
 /* colours */
-$page-color: #2424bb;
-$text-color: #fff;
-$accent-color: #27a4de;
-$dark-color: #000;
+$page-color: #025955;
+$text-color: #fde8cd;
+$accent-color: #00917c;
+$dark-color: #433520;
 
+/* color palettes from Color Hunt */
