add news in index and dataFormat

--- a/src/site/_includes/footer.njk
+++ b/src/site/_includes/footer.njk
@@ -6,7 +6,7 @@
 </ul>
 </div>
 <p>
-  last updated: {{ site.buildTime | dateDisplay('LLL d, yyyy') }}
+  last updated: {{ site.buildTime | dateDisplay() }}
 </p>
 </footer>
 
