update the site architecture

--- a/src/site/_includes/footer.njk
+++ b/src/site/_includes/footer.njk
@@ -6,6 +6,9 @@
 </ul>
 </div>
 <p>
+  tsangkaichang [AT] ucla [DOT] edu
+</p>
+<p>
   last updated: {{ site.buildTime | dateDisplay() }}
 </p>
 </footer>
