--- a/src/site/_includes/header.njk
+++ b/src/site/_includes/header.njk
@@ -7,7 +7,10 @@
       <a href="/about">about<small>all about this</small></a>
     </li>
     <li>
-      <a href="/project">project<small>list of projects</small></a>
+      <a href="/project">project<small>focusing projects</small></a>
+    </li>
+    <li>
+      <a href="/publication">publication<small>list of publications</small></a>
     </li>
   </ul>
   <h1>{{ title }}</h1>
