1st version done

--- a/src/site/_includes/header.njk
+++ b/src/site/_includes/header.njk
@@ -1,16 +1,16 @@
 <header>
   <ul class="nav">
     <li>
-      <a href="/">home<small>where the heart is</small></a>
+      <a href="/">home</a>
     </li>
     <li>
-      <a href="/about">about<small>all about this</small></a>
+      <a href="/about">about</a>
     </li>
     <li>
-      <a href="/project">project<small>focusing projects</small></a>
+      <a href="/project">project</a>
     </li>
     <li>
-      <a href="/publication">publication<small>list of publications</small></a>
+      <a href="/publication">publication</a>
     </li>
   </ul>
   <h1>{{ title }}</h1>
