--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -69,7 +69,7 @@ h1 {
     font-size: 5em;
   };
   @media (min-width: $wide) {
-    font-size: 6em;
+    font-size: 5.5em;
   };
 }
 
@@ -225,10 +225,21 @@ footer {
   }
 }
 
-img {
+
+
+.image-cropper {
+  width: 200px;
+  height: 200px;
+  position: relative;
+  overflow: hidden;
+  margin-left: 20%;
+
+}
+
+.profile-pic {
+  display: block;
+  margin: 0 auto;
+  height: 100%;
   width: auto;
-  max-width: 95%;
-  margin-right: 1rem;
-  margin-left: 1rem;
-  margin-bottom: 1rem;
+  border-radius: 50%;
 }
