--- a/src/site/_includes/header.njk
+++ b/src/site/_includes/header.njk
@@ -7,10 +7,10 @@
       <a href="/about">about</a>
     </li>
     <li>
-      <a href="/project">project</a>
+      <a href="/project">projects</a>
     </li>
     <li>
-      <a href="/publication">publication</a>
+      <a href="/publication">publications</a>
     </li>
   </ul>
   <h1>{{ title }}</h1>
