clean up the website

--- a/src/site/_includes/footer.njk
+++ b/src/site/_includes/footer.njk
@@ -6,7 +6,7 @@
 </ul>
 </div>
 <p>
-  tsangkaichang [AT] ucla [DOT] edu
+  tsangkaichang [at] ucla [dot] edu
 </p>
 <p>
   last updated: {{ site.buildTime | dateDisplay() }}
