--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -32,7 +32,7 @@ body {
   background: url(/images/bg-grid.png), linear-gradient(320deg, $page-color 0%, $accent-color 100%);
 
   @media (min-width: $narrow) {
-    font-size: 18px;
+    font-size: 16px;  /* 18em; */
   };
 }
 
