--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -66,10 +66,10 @@ h1 {
   line-height: 1;
 
   @media (min-width: $mid) {
-    font-size: 5em;
+    font-size: 4em;
   };
   @media (min-width: $wide) {
-    font-size: 5.5em;
+    font-size: 4.4em;
   };
 }
 
@@ -232,8 +232,8 @@ footer {
   height: 200px;
   position: relative;
   overflow: hidden;
-  margin-left: 20%;
-
+  margin-left: 10%;
+  padding: 1em 0 1em 0em;
 }
 
 .profile-pic {
