--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -30,10 +30,6 @@ body {
   min-height: 100vh;
   background:  $page-color;
   background: url(/images/bg-grid.png), linear-gradient(320deg, $page-color 0%, $accent-color 100%);
-
-  @media (min-width: $narrow) {
-    font-size: 1rem; /*16px;*/  /* 18em; */
-  };
 }
 
 .container {
@@ -85,6 +81,8 @@ p {
 }
 
 ul, ol {
+  margin-top: 1em;
+  margin-bottom: 1em;
   padding-left: 1em;
 }
 
@@ -111,7 +109,9 @@ a:focus {
 
 .nav {
   padding-top: 3em;
-
+  margin-top: 0em;
+  margin-bottom: 0em;
+  
   li {
     display: inline;
   }
