--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -233,9 +233,14 @@ footer {
   overflow: hidden;
   float: right;
   shape-outside: circle(50%);
-  shape-margin: 5rem;
+  shape-margin: 6rem;
   /* margin-left: 10%; */
   margin-top: 2rem;
+  
+  @media (max-width: $wide) {
+    width: 160px;
+    height: 160px;
+  };
 }
 
 .profile-pic {
