--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -276,9 +276,10 @@ ul.feature-icons li {
   text-decoration: none;
   display: inline-block;
   margin: 1em 0 1em 0;
-  padding: 0.8em 0 0em 3.5em;
+  padding: 0.5em 0 0em 3.5em;
   position: relative;
   width: 80%;
+  line-height: 1.8;  
   font-family: sans-serif;
   font-weight: 300;
   font-size: 1rem;
