update css style

--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -274,12 +274,13 @@ ul.feature-icons {
 
 ul.feature-icons li {
   text-decoration: none;
+  height: 3em;
   display: inline-block;
-  margin: 1em 0 1em 0;
-  padding: 0.5em 0 0em 3.5em;
+  margin: auto;
+  padding: 0em 0em 0em 3.5em;  /* 2.5 em + 1 em */
   position: relative;
   width: 80%;
-  line-height: 1.8;  
+  line-height: 2.5em;
   font-family: sans-serif;
   font-weight: 300;
   font-size: 1rem;
@@ -310,5 +311,8 @@ ul.feature-icons li:before {
   text-align: center;
   top: 0;
   width: 2.5em;
+
+  margin: auto;
+
 }
 
