--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -16,20 +16,20 @@
 }
 
 html {
-  background-color: $accent-color;
+  background-color: $page-color;
 }
 
 body {
   text-align: center;
   background-color: $page-color;
-  color: mix($text-color, $page-color, 90%);
+  color: $text-color; /*mix($text-color, $page-color, 90%);*/
   font-family: sans-serif;
   font-weight: 300;
   font-size: 1rem; /*16px;*/
   line-height: 1.8;
   min-height: 100vh;
-  background:  $page-color;
-  background: url(/images/bg-grid.png), linear-gradient(320deg, $page-color 0%, $accent-color 100%);
+  background: $page-color; /*$page-color; */
+  /*background: url(/images/bg-grid.png), linear-gradient(320deg, $page-color 0%, $accent-color 100%); */
 }
 
 .container {
@@ -86,11 +86,11 @@ ul, ol {
 
 a:link,
 a:visited {
-  color: $text-color;
+  color: $accent-color;
   text-decoration: none;
   border-bottom-style: solid;
   border-bottom-width: 1px;
-  border-bottom-color: mix($text-color, $accent-color, 20%)
+  border-bottom-color: $accent-color; /*mix($text-color, $accent-color, 20%)*/
 }
 a:hover,
 a:focus {
@@ -119,7 +119,7 @@ a:focus {
     display: inline-block;
     border-top-style: solid;
     border-top-width: 1px;
-    border-top-color: mix($text-color, $accent-color, 40%);
+    border-top-color: $accent-color;
     border-bottom-style: none;
     padding-top: 0.8em;
     padding-bottom: 2em;
@@ -127,7 +127,7 @@ a:focus {
     margin-right: 0.7em;
     width: 8em; /* 9em; */
     text-align: left;
-    color: mix($text-color, $accent-color, 80%);
+    color: $accent-color;
     text-decoration: none;
   }
   a:hover,
@@ -140,7 +140,7 @@ a:focus {
   small {
     display: block;
     font-size: 0.7em;
-    color: mix($text-color,$accent-color, 60%);
+    color: mix($text-color,$page-color, 60%);
   }
 }
 
@@ -185,15 +185,15 @@ footer {
   padding-bottom: 6em;
   border-top-width: 1px;
   border-top-style: solid;
-  border-top-color: mix($text-color, $accent-color, 10%);
-  font-size: 0.7em;
-  color: mix($text-color, $accent-color, 50%);
+  border-top-color: mix($text-color, $page-color, 80%);
+  font-size: 0.8em;
+  color: mix($text-color, $page-color, 80%);
 
 
   a:link,
   a:visited {
-    color: mix($text-color, $accent-color, 90%);
-    border-bottom: solid 1px mix($accent-color, $page-color, 70%);
+    color: $accent-color; /*mix($text-color, $accent-color, 90%);*/
+    border-bottom: solid 1px $accent-color; /*mix($accent-color, $page-color, 70%);*/
   }
   a:hover,
   a:focus {
@@ -217,13 +217,13 @@ footer {
 
   a:link,
   a:visited {
-    color: mix($text-color, $accent-color, 50%);
-    border-bottom: solid 1px mix($accent-color, $page-color, 70%);
+    color: mix($text-color, $page-color, 80%);
+    border-bottom: none;
   }
   a:hover,
   a:focus {
-    color: $text-color;
-    border-bottom: solid 1px mix($accent-color, $page-color, 70%);
+    color: $accent-color;
+    border-bottom: none;
   }
 }
 
@@ -302,6 +302,7 @@ ul.feature-icons li:before {
   border: solid;
   border-radius: 95%;
   border-width: thin;
+  border-color: mix($text-color, $page-color, 80%);
 
   display: block;
   height: 2.5em;
