--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -24,12 +24,11 @@ body {
   background-color: $page-color;
   color: $text-color; /*mix($text-color, $page-color, 90%);*/
   font-family: sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 1rem; /*16px;*/
   line-height: 1.8;
   min-height: 100vh;
   background: $page-color; /*$page-color; */
-  /*background: url(/images/bg-grid.png), linear-gradient(320deg, $page-color 0%, $accent-color 100%); */
 }
 
 .container {
@@ -48,7 +47,8 @@ body {
 
 h1, h2, h3 {
   color: $text-color;
-  font-weight: 600;
+  font-weight: 700;
+  font-family: 'PT Serif';
   margin-top: 2em;
   margin-bottom: 0.2em;
   line-height: 1;
@@ -97,7 +97,7 @@ a:visited {
 a:hover,
 a:focus {
   color: $text-color;
-  border-bottom-color: $accent-color;
+  border-bottom-color: $text-color;
 }
 
 .nakedLink a:link,
@@ -189,6 +189,7 @@ footer {
   border-top-width: 1px;
   border-top-style: solid;
   border-top-color: mix($text-color, $page-color, 80%);
+  font-weight: 500;
   font-size: 0.8em;
   color: mix($text-color, $page-color, 80%);
 
@@ -285,7 +286,7 @@ ul.feature-icons li {
   width: 80%;
   line-height: 2.5em;
   font-family: sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 1rem;
 }
 
