--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -1,5 +1,5 @@
 @import '_variables.css';
-@import '_syntax.css';
+/* @import '_syntax.css'; */
 
 * {
   margin: 0;
@@ -22,13 +22,13 @@ html {
 body {
   text-align: center;
   background-color: $page-color;
-  color: $text-color; /*mix($text-color, $page-color, 90%);*/
+  color: $text-color;
   font-family: sans-serif;
   font-weight: 400;
-  font-size: 1rem; /*16px;*/
+  font-size: 1rem;
   line-height: 1.8;
   min-height: 100vh;
-  background: $page-color; /*$page-color; */
+  background: $page-color;
 }
 
 .container {
@@ -56,7 +56,7 @@ h1, h2, h3 {
 h1 {
   font-size: 3em;
   margin-top: 0.4em;
-  margin-bottom: 0.2em;
+  margin-bottom: 0.5em;
   line-height: 1;
 
   @media (min-width: $mid) {
@@ -68,11 +68,7 @@ h1 {
 }
 
 
-.subtitle {
-  font-size: 1.2em;
-  margin-top: 1em;
-  margin-bottom: 2em;
-}
+
 
 p {
   margin-top: 1em;
@@ -100,17 +96,11 @@ a:focus {
   border-bottom-color: $text-color;
 }
 
-.nakedLink a:link,
-.nakedLink a:visited,
-.nakedLink a:hover,
-.nakedLink a:focus {
-  border-bottom-style:none;
-}
+
 
 .nav {
   padding-top: 3em;
-  margin-top: 0em;
-  margin-bottom: 0em;
+  padding-bottom: 2em;
 
   li {
     display: inline;
@@ -148,43 +138,10 @@ a:focus {
 }
 
 
-code {
-  font-size: 0.8em;
-  background-color: mix($text-color,$accent-color, 80%);
-  color: rgb(42, 65, 77);
-  padding-top: 4px;
-  padding-bottom: 4px;
-  padding-left: 6px;
-  padding-right: 6px;
-  border-radius: 4px;
-  white-space: nowrap;
-}
-
-.date {
-  font-size: 0.8em;
-  font-style: italic;
-}
-
-main {
-  margin-top: 4em;
-}
-
-pre {
-  overflow: auto;
-  border-radius: 6px;
-  code {
-    border-style: none;
-    padding-top: 0;
-    padding-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
 
 
 footer {
   margin-top: 6em;
-  /* padding-top: 4em; */
   padding-bottom: 6em;
   border-top-width: 1px;
   border-top-style: solid;
@@ -193,23 +150,11 @@ footer {
   font-size: 0.8em;
   color: mix($text-color, $page-color, 80%);
 
-
-  a:link,
-  a:visited {
-    color: $accent-color; /*mix($text-color, $accent-color, 90%);*/
-    border-bottom: solid 1px $accent-color; /*mix($accent-color, $page-color, 70%);*/
-  }
-  a:hover,
-  a:focus {
-    color: $text-color;
-    border-bottom: solid 1px $text-color;
-  }
   p {
     padding-left: 1em;
   }
 
 }
-
 
 .media {
   li {
@@ -321,3 +266,37 @@ ul.feature-icons li:before {
 
 }
 
+
+/* 
+
+.subtitle {
+  font-size: 1.2em;
+  margin-top: 1em;
+  margin-bottom: 2em;
+}
+
+.nakedLink a:link,
+.nakedLink a:visited,
+.nakedLink a:hover,
+.nakedLink a:focus {
+  border-bottom-style:none;
+}
+
+main {
+  margin-top: 4em;
+}
+
+
+pre {
+  overflow: auto;
+  border-radius: 6px;
+  code {
+    border-style: none;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+*/
