update alignment in css

--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -13,7 +13,7 @@
     <link rel="manifest" href="/images/favicon/site.webmanifest">
 
     <!-- Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:bold">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif|PT+Serif:bold">
 
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -29,7 +29,6 @@
       gtag('config', '{{ metadata.googleAnalyticsId }}');
     </script>
 
-    <!-- <title>{{ title }}{% if title!=metadata.title %} | {{ metadata.title }}{% endif %}</title> -->
     <title>{{ metadata.title }}</title>
   </head>
   <body {% if bodyClass %}class="{{ bodyClass }}"{% endif %}>
