--- a/src/site/_includes/postcss/_variables.css
+++ b/src/site/_includes/postcss/_variables.css
@@ -7,3 +7,8 @@ $wide: 1200px;
 $text-color: #2f4858;
 $accent-color: #c68226;
 $page-color: #f1f1e6;
+
+$header-footer-padding: 10px;
+
+$content-padding-top: 1rem;
+$content-margin-bottom: 1rem;
