--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -58,7 +58,6 @@ h1 {
   font-size: 3em;
   padding-top: 0.4em;
   margin-bottom: 0.5em;
-  line-height: 1;
 
   @media (min-width: $mid) {
     font-size: 4em;
@@ -78,7 +77,7 @@ p {
 ul, ol {
   list-style-position: inside;  
   padding-top: $content-padding-top;
-  padding-left: 0.1rem;
+  padding-left: 0.4rem;
   margin-bottom: $content-margin-bottom;
 }
 
@@ -119,7 +118,7 @@ a:focus {
     border-top-color: $text-color;
     border-bottom-style: none;
     margin-left: 0;
-    margin-right: 0.7em;
+    margin-right: 1em;
     padding: $header-footer-padding;
     padding-bottom: 2rem;
     width: 7em; /* 9em; */
@@ -134,7 +133,6 @@ a:focus {
       border-bottom-style: none;
   }
 }
-
 
 
 
@@ -186,7 +184,7 @@ footer {
   shape-outside: circle(50%);
   margin: 15px;
 
-  
+
   @media (max-width: $wide) {
     width: 150px;
     height: 150px;
@@ -194,7 +192,9 @@ footer {
   };
 }
 
-.highlight-pic {
+
+
+.profile-pic {
   display: block;
   margin: 0 auto;
   height: 100%;
@@ -252,16 +252,14 @@ ul.feature-icons li:before {
   border-color: mix($text-color, $page-color, 80%);
 
   display: block;
+  width: 2.5em;
   height: 2.5em;
   left: 0;
-  line-height: 2.5em;
   position: absolute;
   text-align: center;
   top: 0;
-  width: 2.5em;
 
   margin: auto;
-
 }
 
 
