add github link

--- a/src/site/_includes/footer.njk
+++ b/src/site/_includes/footer.njk
@@ -3,6 +3,7 @@
   <ul>
     <li><a href="https://www.linkedin.com/in/tsang-kai-chang-7a3aa7111/" target="_blank" rel="noopener"><i class="fab fa-linkedin-in"></i></a></li>
     <li><a href="https://scholar.google.com/citations?hl=en&user=2UfyRPoAAAAJ" target="_blank" rel="noopener"><i class="fas fa-graduation-cap"></i></a</li>
+    <li><a href="https://github.com/tsangkai" target="_blank" rel="noopener"><i class="fab fa-github"></i></a</li>
   </ul>
 </div>
 <p>
